RESOLVED FIXED90730
[BlackBerry] Race destroying the compositor
https://bugs.webkit.org/show_bug.cgi?id=90730
Summary [BlackBerry] Race destroying the compositor
George Staikos
Reported 2012-07-07 14:32:20 PDT
There is a race condition destroying the compositor that can allow it to process animations after it has been detached. Properly setup a detach() method.
Attachments
Patch to fix it. Reviewed and tested already. (3.30 KB, patch)
2012-07-07 14:57 PDT, George Staikos
no flags
George Staikos
Comment 1 2012-07-07 14:57:54 PDT
Created attachment 151148 [details] Patch to fix it. Reviewed and tested already. No idea how to make a testcase for this. Requires Cascades.
WebKit Review Bot
Comment 2 2012-07-07 14:59:26 PDT
Attachment 151148 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/blackberry/Api/WebPage.cpp',..." exit_code: 1 Source/WebKit/blackberry/Api/WebPageCompositor_p.h:93: The parameter name "page" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 3 2012-07-07 15:26:50 PDT
Comment on attachment 151148 [details] Patch to fix it. Reviewed and tested already. Clearing flags on attachment: 151148 Committed r122056: <http://trac.webkit.org/changeset/122056>
WebKit Review Bot
Comment 4 2012-07-07 15:26:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.