Detach animation clients properly if we clear the web page pointer. https://bugs.webkit.org/show_bug.cgi?id=90730

Reviewed by Adam Treat.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::destroyCompositor):
* Api/WebPageCompositor.cpp:
(BlackBerry::WebKit::WebPageCompositorPrivate::WebPageCompositorPrivate):
(BlackBerry::WebKit::WebPageCompositorPrivate::~WebPageCompositorPrivate):
(WebKit):
(BlackBerry::WebKit::WebPageCompositorPrivate::detach):
(BlackBerry::WebKit::WebPageCompositorPrivate::setPage):
* Api/WebPageCompositor_p.h:
(WebPageCompositorPrivate):


Canonical link: https://commits.webkit.org/108568@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122056 268f45cc-cd09-0410-ab3c-d52691b4dbfc